Font Colors and Separate Themes
Once applied this commit will change the font colors according to the
design and move all themes into a dedicated file.

Closes #333

--- a/briar-android/res/layout/forum_discussion_cell.xml
+++ b/briar-android/res/layout/forum_discussion_cell.xml
@@ -82,6 +82,7 @@
 			android:layout_marginTop="@dimen/margin_medium"
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
+			android:textColor="@color/briar_text_primary"
 			tools:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua."/>
 
 		<de.hdodenhof.circleimageview.CircleImageView
