--- a/briar-android/res/layout/share_forum_message.xml
+++ b/briar-android/res/layout/share_forum_message.xml
@@ -19,6 +19,7 @@
 			android:layout_weight="1"
 			android:gravity="top"
 			android:textSize="@dimen/text_size_medium"
+			android:textColor="@color/briar_text_primary"
 			android:text="@string/forum_share_message"/>
 
 		<EditText
