--- a/briar-android/res/layout/invitation_bluetooth_confirmation_code.xml
+++ b/briar-android/res/layout/invitation_bluetooth_confirmation_code.xml
@@ -47,6 +47,7 @@
 			android:layout_height="wrap_content"
 			android:padding="@dimen/margin_medium"
 			android:textSize="50sp"
+			android:textColor="@color/briar_text_secondary"
 			android:layout_below="@+id/yourConfirmationCodeView"
 			android:layout_centerHorizontal="true"
 			tools:text="1337"/>
