--- a/briar-android/res/layout/list_item_introduction_in.xml
+++ b/briar-android/res/layout/list_item_introduction_in.xml
@@ -27,6 +27,7 @@
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
 			android:textStyle="italic"
+			android:textColor="@color/briar_text_secondary"
 			tools:text="@string/introduction_request_received"/>
 
 		<TextView
