--- a/briar-android/res/layout/list_item_notice_out.xml
+++ b/briar-android/res/layout/list_item_notice_out.xml
@@ -22,6 +22,7 @@
 			android:textIsSelectable="true"
 			android:textSize="@dimen/text_size_medium"
 			android:textStyle="italic"
+			android:textColor="@color/briar_text_secondary"
 			tools:text="@string/introduction_response_accepted_sent"/>
 
 		<TextView
