--- a/briar-android/res/layout/list_item_transport.xml
+++ b/briar-android/res/layout/list_item_transport.xml
@@ -20,7 +20,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="match_parent"
 		android:padding="@dimen/margin_small"
-		android:textColor="@android:color/tertiary_text_light"
+		android:textColor="@color/briar_text_secondary"
 		tools:text="@string/transport_tor"/>
 
 </LinearLayout>
