--- a/briar-android/res/values/color.xml
+++ b/briar-android/res/values/color.xml
@@ -26,11 +26,14 @@
 	<color name="briar_accent">@color/briar_blue</color>
 	<color name="briar_accent_dark">@color/briar_blue_dark</color>
 
-	<color name="briar_text_link">@color/briar_green_dark</color>
-	<color name="briar_text_primary">@color/briar_primary</color>
+	<!-- text colors -->
+	<color name="briar_text_link">#06b9ff</color>
+	<color name="briar_text_primary">#df000000</color>
 	<color name="briar_text_primary_inverse">#ffffff</color>
-	<color name="briar_text_secondary">#333333</color>
-	<color name="briar_text_tertiary">#FF78909C</color>
+	<color name="briar_text_secondary">#8a000000</color>
+	<color name="briar_text_secondary_inverse">#b4ffffff</color>
+	<color name="briar_text_tertiary">#61000000</color>
+	<color name="briar_text_tertiary_inverse">#80ffffff</color>
 	<color name="briar_button_positive">#06b9ff</color>
 	<color name="briar_button_negative">#ff0000</color>
 
