--- a/briar-android/res/layout/fragment_keyagreement_id.xml
+++ b/briar-android/res/layout/fragment_keyagreement_id.xml
@@ -20,7 +20,8 @@
 			style="@style/BriarTextBody"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:text="@string/your_nickname"/>
+			android:text="@string/your_nickname"
+			android:visibility="gone"/>
 
 		<Spinner
 			android:id="@+id/spinner"
@@ -28,7 +29,8 @@
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/margin_medium"
 			android:background="@drawable/spinner_border"
-			android:spinnerMode="dropdown"/>
+			android:spinnerMode="dropdown"
+			android:visibility="gone"/>
 
 		<ImageView
 			android:id="@+id/imageView"
