Simple Empty State Messages
This implements very basic and simple empty state messages for the
current features.

Closes #327

--- a/briar-android/res/layout/briar_recycler_view.xml
+++ b/briar-android/res/layout/briar_recycler_view.xml
@@ -24,8 +24,10 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_centerInParent="true"
+		android:gravity="center"
 		android:padding="@dimen/margin_activity_horizontal"
+		android:text="@string/no_data"
 		android:textSize="@dimen/text_size_large"
-		android:text="@string/no_data"/>
+		tools:text="@string/no_contacts"/>
 
 </RelativeLayout>
