--- a/briar-android/res/layout/introduction_message.xml
+++ b/briar-android/res/layout/introduction_message.xml
@@ -105,7 +105,7 @@
 			android:layout_marginTop="@dimen/margin_medium"
 			android:layout_weight="1"
 			android:gravity="top"
-			android:textColor="@color/briar_text_primary"
+			android:textColor="@color/briar_text_secondary"
 			android:textSize="@dimen/text_size_medium"
 			tools:text="@string/introduction_message_text"/>
 
@@ -116,7 +116,9 @@
 			android:layout_marginTop="@dimen/margin_medium"
 			android:gravity="bottom"
 			android:hint="@string/introduction_message_hint"
-			android:inputType="text|textMultiLine|textCapSentences"/>
+			android:inputType="text|textMultiLine|textCapSentences"
+			android:textColor="@color/briar_text_primary"
+			android:textColorHint="@color/briar_text_tertiary"/>
 
 		<Button
 			android:id="@+id/makeIntroductionButton"
