--- a/briar-android/res/layout/activity_dev_report.xml
+++ b/briar-android/res/layout/activity_dev_report.xml
@@ -4,20 +4,14 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	android:orientation="vertical">
+	android:orientation="vertical"
+	tools:context=".android.report.DevReportActivity">
 
 	<android.support.v7.widget.Toolbar
+		android:id="@+id/toolbar"
 		style="@style/BriarToolbar"
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
-
-		<TextView
-			android:id="@+id/title"
-			style="@style/TextAppearance.AppCompat.Large.Inverse"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			tools:text="@string/crash_report_title"/>
-	</android.support.v7.widget.Toolbar>
+		android:layout_height="wrap_content"/>
 
 	<RelativeLayout
 		android:layout_width="match_parent"
