--- a/briar-android/res/layout/activity_dev_report.xml
+++ b/briar-android/res/layout/activity_dev_report.xml
@@ -1,122 +1,201 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<FrameLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent"
-	android:orientation="vertical"
-	tools:context=".android.report.DevReportActivity">
+	android:layout_height="match_parent">
 
-	<android.support.v7.widget.Toolbar
-		android:id="@+id/toolbar"
-		style="@style/BriarToolbar"
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content"/>
+		android:layout_height="match_parent"
+		android:orientation="vertical"
+		tools:context=".android.report.DevReportActivity">
 
-	<RelativeLayout
-		android:layout_width="match_parent"
-		android:layout_height="match_parent">
-
-		<LinearLayout
+		<android.support.v7.widget.Toolbar
+			android:id="@+id/toolbar"
+			style="@style/BriarToolbar"
 			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:orientation="vertical"
-			android:paddingTop="@dimen/margin_medium">
+			android:layout_height="wrap_content"/>
 
-			<EditText
-				android:id="@+id/user_comment"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginEnd="@dimen/margin_large"
-				android:layout_marginLeft="@dimen/margin_large"
-				android:layout_marginRight="@dimen/margin_large"
-				android:layout_marginStart="@dimen/margin_large"
-				android:inputType="textMultiLine|textCapSentences"
-				tools:hint="@string/describe_crash"/>
-
-			<EditText
-				android:id="@+id/user_email"
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginEnd="@dimen/margin_large"
-				android:layout_marginLeft="@dimen/margin_large"
-				android:layout_marginRight="@dimen/margin_large"
-				android:layout_marginStart="@dimen/margin_large"
-				android:layout_marginTop="@dimen/margin_small"
-				android:hint="@string/optional_contact_email"
-				android:inputType="textEmailAddress"
-				android:maxLines="1"/>
+		<RelativeLayout
+			android:layout_width="match_parent"
+			android:layout_height="match_parent">
 
 			<LinearLayout
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
-				android:layout_marginEnd="@dimen/margin_large"
-				android:layout_marginLeft="@dimen/margin_large"
-				android:layout_marginRight="@dimen/margin_large"
-				android:layout_marginStart="@dimen/margin_large"
-				android:layout_marginTop="@dimen/margin_small"
-				android:gravity="center_vertical"
-				android:orientation="horizontal">
+				android:orientation="vertical"
+				android:paddingTop="@dimen/margin_medium">
 
-				<TextView
-					android:id="@+id/debug_report"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:text="@string/debug_report"
-					android:textColor="@color/briar_text_primary"/>
-
-				<CheckBox
-					android:id="@+id/include_debug_report"
-					android:layout_width="0dp"
-					android:layout_height="wrap_content"
-					android:layout_weight="1"
-					android:checked="false"
-					android:text="@string/include_debug_report"
-					android:visibility="gone"/>
-
-				<ImageView
-					android:id="@+id/chevron"
-					android:layout_width="wrap_content"
-					android:layout_height="wrap_content"
-					android:layout_marginLeft="@dimen/margin_large"
-					android:layout_marginStart="@dimen/margin_large"
-					android:clickable="true"
-					android:src="@drawable/selector_chevron"
-					android:tint="@color/briar_button_positive"/>
-
-			</LinearLayout>
-
-			<ScrollView
-				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:layout_marginTop="@dimen/margin_small">
-
-				<LinearLayout
-					android:id="@+id/report_content"
+				<EditText
+					android:id="@+id/user_comment"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:gravity="center_horizontal"
-					android:orientation="vertical"
-					android:paddingBottom="@dimen/listitem_height_one_line_avatar"
-					android:paddingEnd="@dimen/margin_large"
-					android:paddingLeft="@dimen/margin_large"
-					android:paddingRight="@dimen/margin_large"
-					android:paddingStart="@dimen/margin_large"
-					android:paddingTop="@dimen/margin_small"
-					android:visibility="gone"/>
+					android:layout_marginEnd="@dimen/margin_large"
+					android:layout_marginLeft="@dimen/margin_large"
+					android:layout_marginRight="@dimen/margin_large"
+					android:layout_marginStart="@dimen/margin_large"
+					android:inputType="textMultiLine|textCapSentences"
+					tools:hint="@string/describe_crash"/>
 
-			</ScrollView>
-		</LinearLayout>
+				<EditText
+					android:id="@+id/user_email"
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginEnd="@dimen/margin_large"
+					android:layout_marginLeft="@dimen/margin_large"
+					android:layout_marginRight="@dimen/margin_large"
+					android:layout_marginStart="@dimen/margin_large"
+					android:layout_marginTop="@dimen/margin_small"
+					android:hint="@string/optional_contact_email"
+					android:inputType="textEmailAddress"
+					android:maxLines="1"/>
 
-		<ProgressBar
-			android:id="@+id/progress_wheel"
-			style="?android:attr/progressBarStyleLarge"
-			android:layout_width="wrap_content"
+				<LinearLayout
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginEnd="@dimen/margin_large"
+					android:layout_marginLeft="@dimen/margin_large"
+					android:layout_marginRight="@dimen/margin_large"
+					android:layout_marginStart="@dimen/margin_large"
+					android:layout_marginTop="@dimen/margin_small"
+					android:gravity="center_vertical"
+					android:orientation="horizontal">
+
+					<TextView
+						android:id="@+id/debug_report"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:text="@string/debug_report"
+						android:textColor="@color/briar_text_primary"/>
+
+					<CheckBox
+						android:id="@+id/include_debug_report"
+						android:layout_width="0dp"
+						android:layout_height="wrap_content"
+						android:layout_weight="1"
+						android:checked="false"
+						android:text="@string/include_debug_report"
+						android:visibility="gone"/>
+
+					<ImageView
+						android:id="@+id/chevron"
+						android:layout_width="wrap_content"
+						android:layout_height="wrap_content"
+						android:layout_marginLeft="@dimen/margin_large"
+						android:layout_marginStart="@dimen/margin_large"
+						android:clickable="true"
+						android:src="@drawable/selector_chevron"
+						android:tint="@color/briar_button_positive"/>
+
+				</LinearLayout>
+
+				<ScrollView
+					android:layout_width="match_parent"
+					android:layout_height="wrap_content"
+					android:layout_marginTop="@dimen/margin_small">
+
+					<LinearLayout
+						android:id="@+id/report_content"
+						android:layout_width="match_parent"
+						android:layout_height="wrap_content"
+						android:gravity="center_horizontal"
+						android:orientation="vertical"
+						android:paddingBottom="@dimen/listitem_height_one_line_avatar"
+						android:paddingEnd="@dimen/margin_large"
+						android:paddingLeft="@dimen/margin_large"
+						android:paddingRight="@dimen/margin_large"
+						android:paddingStart="@dimen/margin_large"
+						android:paddingTop="@dimen/margin_small"
+						android:visibility="gone"/>
+
+				</ScrollView>
+			</LinearLayout>
+
+			<ProgressBar
+				android:id="@+id/progress_wheel"
+				style="?android:attr/progressBarStyleLarge"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_centerInParent="true"
+				android:indeterminate="true"
+				android:visibility="gone"/>
+
+		</RelativeLayout>
+	</LinearLayout>
+
+	<LinearLayout
+		android:id="@+id/request_report"
+		android:layout_width="match_parent"
+		android:layout_height="match_parent"
+		android:background="@android:color/background_light"
+		android:clickable="true"
+		android:gravity="center"
+		android:orientation="vertical"
+		android:padding="@dimen/margin_large"
+		android:visibility="gone">
+
+		<TextView
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_centerInParent="true"
-			android:indeterminate="true"
-			android:visibility="gone"/>
+			android:gravity="center"
+			android:text="@string/sad_face"
+			android:textColor="@color/briar_text_primary"
+			android:textSize="@dimen/text_size_xlarge"/>
 
-	</RelativeLayout>
-</LinearLayout>
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_large"
+			android:gravity="center"
+			android:text="@string/briar_crashed"
+			android:textColor="@color/briar_text_primary"
+			android:textSize="@dimen/text_size_large"/>
+
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_large"
+			android:gravity="center"
+			android:text="@string/not_your_fault"
+			android:textColor="@color/briar_text_secondary"/>
+
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_large"
+			android:gravity="center"
+			android:text="@string/please_send_report"
+			android:textColor="@color/briar_text_secondary"/>
+
+		<TextView
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_large"
+			android:gravity="center"
+			android:text="@string/report_is_encrypted"
+			android:textColor="@color/briar_text_secondary"/>
+
+		<LinearLayout
+			android:layout_width="match_parent"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="@dimen/margin_large"
+			android:gravity="center_horizontal">
+
+			<Button
+				android:id="@+id/declineButton"
+				style="@style/BriarButton.Default"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/dialog_button_decline"/>
+
+			<Button
+				android:id="@+id/acceptButton"
+				style="@style/BriarButton.Default"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:text="@string/dialog_button_accept"/>
+		</LinearLayout>
+	</LinearLayout>
+</FrameLayout>
