--- a/briar-android/res/layout/fragment_blog_post.xml
+++ b/briar-android/res/layout/fragment_blog_post.xml
@@ -62,12 +62,8 @@
 
 		<TextView
 			android:id="@+id/body"
-			android:layout_width="wrap_content"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_alignParentEnd="true"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentRight="true"
-			android:layout_alignParentStart="true"
 			android:layout_below="@+id/title"
 			android:layout_marginTop="@dimen/margin_medium"
 			tools:text="Body of Blog Post. This could be insanely large or just a short text as well."/>
