Allow different package IDs (for preference intents)
Closes #515

--- a/briar-android/res/xml/settings.xml
+++ b/briar-android/res/xml/settings.xml
@@ -34,7 +34,7 @@
 
 			<intent
 				android:targetClass="org.briarproject.android.ChangePasswordActivity"
-				android:targetPackage="org.briarproject"/>
+				android:targetPackage="@string/app_package"/>
 		</Preference>
 
 	</PreferenceCategory>
@@ -48,7 +48,7 @@
 
 			<intent
 				android:targetClass="org.briarproject.android.panic.PanicPreferencesActivity"
-				android:targetPackage="org.briarproject"/>
+				android:targetPackage="@string/app_package"/>
 
 		</Preference>
 
