--- a/briar-android/res/layout/list_item_selectable_contact.xml
+++ b/briar-android/res/layout/list_item_selectable_contact.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
@@ -9,8 +8,9 @@
 
 	<RelativeLayout
 		android:layout_width="match_parent"
-		android:layout_height="@dimen/listitem_height_contact_selector"
-		android:background="?attr/selectableItemBackground">
+		android:layout_height="wrap_content"
+		android:background="?attr/selectableItemBackground"
+		android:padding="@dimen/listitem_horizontal_margin">
 
 		<de.hdodenhof.circleimageview.CircleImageView
 			android:id="@+id/avatarView"
@@ -20,13 +20,10 @@
 			android:layout_alignParentLeft="true"
 			android:layout_alignParentStart="true"
 			android:layout_centerVertical="true"
-			android:layout_marginLeft="@dimen/listitem_horizontal_margin"
-			android:layout_marginStart="@dimen/listitem_horizontal_margin"
 			android:transitionName="avatar"
 			tools:src="@drawable/ic_launcher"/>
 
-		<TextView
-			android:id="@+id/nameView"
+		<LinearLayout
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
 			android:layout_centerVertical="true"
@@ -35,10 +32,28 @@
 			android:layout_toEndOf="@+id/avatarView"
 			android:layout_toLeftOf="@+id/checkBox"
 			android:layout_toRightOf="@+id/avatarView"
-			android:maxLines="2"
-			android:textSize="@dimen/text_size_large"
-			android:textColor="@color/briar_text_primary"
-			tools:text="This is a name of a contact"/>
+			android:orientation="vertical">
+
+			<TextView
+				android:id="@+id/nameView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:maxLines="2"
+				android:textColor="@color/briar_text_primary"
+				android:textSize="@dimen/text_size_large"
+				tools:text="This is a name of a contact"/>
+
+			<TextView
+				android:id="@+id/infoView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:maxLines="2"
+				android:text="@string/forum_invitation_already_sharing"
+				android:textColor="@color/briar_text_tertiary"
+				android:textSize="@dimen/text_size_small"
+				tools:visibility="visible"/>
+
+		</LinearLayout>
 
 		<CheckBox
 			android:id="@+id/checkBox"
@@ -47,7 +62,6 @@
 			android:layout_alignParentEnd="true"
 			android:layout_alignParentRight="true"
 			android:layout_centerVertical="true"
-			android:layout_marginRight="@dimen/listitem_horizontal_margin"
 			android:clickable="false"/>
 
 	</RelativeLayout>
