Show notifications for new blog posts
This also adds a setting allowing people to turn blog post notifications off.

Closes #488

--- a/briar-android/res/xml/settings.xml
+++ b/briar-android/res/xml/settings.xml
@@ -71,6 +71,12 @@
 
 		<CheckBoxPreference
 			android:defaultValue="true"
+			android:key="pref_key_notify_blog_posts"
+			android:persistent="false"
+			android:title="@string/notify_blog_posts_setting"/>
+
+		<CheckBoxPreference
+			android:defaultValue="true"
 			android:key="pref_key_notify_vibration"
 			android:persistent="false"
 			android:title="@string/notify_vibration_setting"/>
