--- a/briar-android/res/drawable/selector_chevron.xml
+++ b/briar-android/res/drawable/selector_chevron.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-	<item android:state_selected="true" android:drawable="@drawable/chevron48dp_down"/>
+	<item android:drawable="@drawable/chevron48dp_down" android:state_selected="true"/>
 	<item android:drawable="@drawable/chevron48dp_up"/>
 </selector>
