--- a/briar-android/res/layout/activity_dev_report.xml
+++ b/briar-android/res/layout/activity_dev_report.xml
@@ -19,183 +19,171 @@
 
 		<RelativeLayout
 			android:layout_width="match_parent"
-			android:layout_height="match_parent">
+			android:layout_height="match_parent"
+			android:layout_marginEnd="@dimen/margin_large"
+			android:layout_marginLeft="@dimen/margin_large"
+			android:layout_marginRight="@dimen/margin_large"
+			android:layout_marginStart="@dimen/margin_large">
 
-			<LinearLayout
+			<android.support.design.widget.TextInputLayout
+				android:id="@+id/user_comment_layout"
 				android:layout_width="match_parent"
-				android:layout_height="wrap_content"
-				android:orientation="vertical"
-				android:paddingTop="@dimen/margin_medium">
+				android:layout_height="wrap_content">
 
-				<EditText
+				<android.support.design.widget.TextInputEditText
 					android:id="@+id/user_comment"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_marginEnd="@dimen/margin_large"
-					android:layout_marginLeft="@dimen/margin_large"
-					android:layout_marginRight="@dimen/margin_large"
-					android:layout_marginStart="@dimen/margin_large"
 					android:inputType="textMultiLine|textCapSentences"
 					tools:hint="@string/describe_crash"/>
 
-				<EditText
+			</android.support.design.widget.TextInputLayout>
+
+			<android.support.design.widget.TextInputLayout
+				android:id="@+id/user_email_layout"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_below="@+id/user_comment_layout"
+				android:layout_marginTop="@dimen/margin_small">
+
+				<android.support.design.widget.TextInputEditText
 					android:id="@+id/user_email"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_marginEnd="@dimen/margin_large"
-					android:layout_marginLeft="@dimen/margin_large"
-					android:layout_marginRight="@dimen/margin_large"
-					android:layout_marginStart="@dimen/margin_large"
-					android:layout_marginTop="@dimen/margin_small"
 					android:hint="@string/optional_contact_email"
 					android:inputType="textEmailAddress"
 					android:maxLines="1"/>
 
+			</android.support.design.widget.TextInputLayout>
+
+			<CheckBox
+				android:id="@+id/include_debug_report"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentLeft="true"
+				android:layout_below="@+id/user_email_layout"
+				android:layout_marginTop="@dimen/margin_small"
+				android:layout_toLeftOf="@+id/chevron"
+				android:checked="false"
+				android:text="@string/include_debug_report_crash"/>
+
+			<Button
+				android:id="@+id/chevron"
+				style="@style/BriarButtonFlat.Positive"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:layout_alignTop="@+id/include_debug_report"
+				android:text="@string/show"/>
+
+			<ScrollView
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_below="@id/include_debug_report"
+				android:layout_marginTop="@dimen/margin_small">
+
 				<LinearLayout
+					android:id="@+id/report_content"
 					android:layout_width="match_parent"
 					android:layout_height="wrap_content"
-					android:layout_marginEnd="@dimen/margin_large"
-					android:layout_marginLeft="@dimen/margin_large"
-					android:layout_marginRight="@dimen/margin_large"
-					android:layout_marginStart="@dimen/margin_large"
-					android:layout_marginTop="@dimen/margin_small"
-					android:gravity="center_vertical"
-					android:orientation="horizontal">
+					android:gravity="center_horizontal"
+					android:orientation="vertical"
+					android:paddingBottom="@dimen/listitem_height_one_line_avatar"
+					android:paddingEnd="@dimen/margin_large"
+					android:paddingLeft="@dimen/margin_large"
+					android:paddingRight="@dimen/margin_large"
+					android:paddingStart="@dimen/margin_large"
+					android:paddingTop="@dimen/margin_small"
+					android:visibility="gone"/>
 
-					<TextView
-						android:id="@+id/debug_report"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1"
-						android:text="@string/debug_report"
-						android:textColor="@color/briar_text_primary"/>
-
-					<CheckBox
-						android:id="@+id/include_debug_report"
-						android:layout_width="0dp"
-						android:layout_height="wrap_content"
-						android:layout_weight="1"
-						android:checked="false"
-						android:text="@string/include_debug_report"
-						android:visibility="gone"/>
-
-					<ImageView
-						android:id="@+id/chevron"
-						android:layout_width="wrap_content"
-						android:layout_height="wrap_content"
-						android:layout_marginLeft="@dimen/margin_large"
-						android:layout_marginStart="@dimen/margin_large"
-						android:clickable="true"
-						android:src="@drawable/selector_chevron"
-						android:tint="@color/briar_button_positive"/>
-
-				</LinearLayout>
-
-				<ScrollView
-					android:layout_width="match_parent"
-					android:layout_height="wrap_content"
-					android:layout_marginTop="@dimen/margin_small">
-
-					<LinearLayout
-						android:id="@+id/report_content"
-						android:layout_width="match_parent"
-						android:layout_height="wrap_content"
-						android:gravity="center_horizontal"
-						android:orientation="vertical"
-						android:paddingBottom="@dimen/listitem_height_one_line_avatar"
-						android:paddingEnd="@dimen/margin_large"
-						android:paddingLeft="@dimen/margin_large"
-						android:paddingRight="@dimen/margin_large"
-						android:paddingStart="@dimen/margin_large"
-						android:paddingTop="@dimen/margin_small"
-						android:visibility="gone"/>
-
-				</ScrollView>
-			</LinearLayout>
+			</ScrollView>
 
 			<ProgressBar
 				android:id="@+id/progress_wheel"
 				style="?android:attr/progressBarStyleLarge"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
-				android:layout_centerInParent="true"
+				android:layout_alignParentBottom="true"
+				android:layout_below="@+id/include_debug_report"
+				android:layout_centerHorizontal="true"
 				android:indeterminate="true"
 				android:visibility="gone"/>
 
 		</RelativeLayout>
 	</LinearLayout>
 
-	<LinearLayout
+	<RelativeLayout
 		android:id="@+id/request_report"
 		android:layout_width="match_parent"
 		android:layout_height="match_parent"
-		android:background="@android:color/background_light"
+		android:background="@color/window_background"
 		android:clickable="true"
 		android:gravity="center"
-		android:orientation="vertical"
 		android:padding="@dimen/margin_large"
 		android:visibility="gone">
 
 		<TextView
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:gravity="center"
-			android:text="@string/sad_face"
-			android:textColor="@color/briar_text_primary"
-			android:textSize="@dimen/text_size_xlarge"/>
-
-		<TextView
+			android:id="@+id/crashed"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/margin_large"
 			android:gravity="center"
 			android:text="@string/briar_crashed"
-			android:textColor="@color/briar_text_primary"
+			android:textColor="@color/briar_text_secondary"
 			android:textSize="@dimen/text_size_large"/>
 
 		<TextView
+			android:id="@+id/fault"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_below="@+id/crashed"
 			android:layout_marginTop="@dimen/margin_large"
 			android:gravity="center"
 			android:text="@string/not_your_fault"
-			android:textColor="@color/briar_text_secondary"/>
+			android:textColor="@color/briar_text_secondary"
+			android:textSize="@dimen/text_size_large"/>
 
 		<TextView
+			android:id="@+id/pleaseSend"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_below="@+id/fault"
 			android:layout_marginTop="@dimen/margin_large"
 			android:gravity="center"
 			android:text="@string/please_send_report"
-			android:textColor="@color/briar_text_secondary"/>
+			android:textColor="@color/briar_text_secondary"
+			android:textSize="@dimen/text_size_large"/>
 
 		<TextView
+			android:id="@+id/encrypted"
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_below="@+id/pleaseSend"
+			android:layout_marginBottom="@dimen/margin_large"
 			android:layout_marginTop="@dimen/margin_large"
 			android:gravity="center"
 			android:text="@string/report_is_encrypted"
-			android:textColor="@color/briar_text_secondary"/>
+			android:textColor="@color/briar_text_secondary"
+			android:textSize="@dimen/text_size_large"/>
 
-		<LinearLayout
-			android:layout_width="match_parent"
+		<Button
+			android:id="@+id/declineButton"
+			style="@style/BriarButtonFlat.Negative"
+			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"
-			android:layout_marginTop="@dimen/margin_large"
-			android:gravity="center_horizontal">
+			android:layout_alignParentLeft="true"
+			android:layout_below="@+id/encrypted"
+			android:text="@string/close"/>
 
-			<Button
-				android:id="@+id/declineButton"
-				style="@style/BriarButton.Default"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/dialog_button_decline"/>
+		<Button
+			android:id="@+id/acceptButton"
+			style="@style/BriarButtonFlat.Positive"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_alignParentRight="true"
+			android:layout_below="@+id/encrypted"
+			android:text="@string/send_report"/>
 
-			<Button
-				android:id="@+id/acceptButton"
-				style="@style/BriarButton.Default"
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:text="@string/dialog_button_accept"/>
-		</LinearLayout>
-	</LinearLayout>
+	</RelativeLayout>
+
 </FrameLayout>
