--- a/briar-android/res/menu/forum_actions.xml
+++ b/briar-android/res/menu/forum_actions.xml
@@ -17,7 +17,7 @@
 
 	<item
 		android:id="@+id/action_forum_sharing_status"
-		android:title="@string/forum_sharing_status"
+		android:title="@string/sharing_status"
 		app:showAsAction="never"/>
 
 	<item
