--- a/briar-android/res/menu/blogs_blog_actions.xml
+++ b/briar-android/res/menu/blogs_blog_actions.xml
@@ -11,7 +11,7 @@
 
 	<item
 		android:id="@+id/action_blog_sharing_status"
-		android:title="@string/forum_sharing_status"
+		android:title="@string/sharing_status"
 		app:showAsAction="never"/>
 
 </menu>
