--- a/briar-android/res/menu/blogs_blog_actions.xml
+++ b/briar-android/res/menu/blogs_blog_actions.xml
@@ -14,4 +14,10 @@
 		android:title="@string/sharing_status"
 		app:showAsAction="never"/>
 
+	<item
+		android:id="@+id/action_blog_delete"
+		android:icon="@drawable/action_delete_white"
+		android:title="@string/blogs_remove_blog"
+		app:showAsAction="never"/>
+
 </menu>
