--- a/briar-android/res/layout-land/invitation_bluetooth_start.xml
+++ b/briar-android/res/layout-land/invitation_bluetooth_start.xml
@@ -46,7 +46,7 @@
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="@dimen/margin_medium"
-				android:background="@drawable/spinner_border"
+				android:background="@drawable/border_spinner"
 				android:spinnerMode="dropdown"
 				android:visibility="gone"/>
 
