--- a/briar-android/res/layout/fragment_keyagreement_id.xml
+++ b/briar-android/res/layout/fragment_keyagreement_id.xml
@@ -28,7 +28,7 @@
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="@dimen/margin_medium"
-			android:background="@drawable/spinner_border"
+			android:background="@drawable/border_spinner"
 			android:spinnerMode="dropdown"
 			android:visibility="gone"/>
 
@@ -41,13 +41,33 @@
 			android:scaleType="fitCenter"
 			android:src="@drawable/qr_code_intro"/>
 
-		<TextView
-			android:id="@+id/faceToFaceView"
-			style="@style/BriarTextBody"
+		<LinearLayout
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:layout_marginLeft="@dimen/margin_small"
+			android:layout_marginRight="@dimen/margin_small"
 			android:layout_marginTop="@dimen/margin_xlarge"
-			android:text="@string/face_to_face"/>
+			android:background="@drawable/border_explanation"
+			android:orientation="vertical"
+			android:padding="@dimen/margin_large">
+
+			<ImageView
+				android:id="@+id/explanationView"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:adjustViewBounds="true"
+				android:padding="@dimen/margin_medium"
+				android:src="@drawable/qr_code_explanation"/>
+
+			<TextView
+				android:id="@+id/faceToFaceView"
+				style="@style/BriarTextBody"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:layout_marginTop="@dimen/margin_medium"
+				android:text="@string/face_to_face"/>
+
+		</LinearLayout>
 
 		<Button
 			android:id="@+id/continueButton"
