--- a/briar-android/res/layout/list_item_introduction_in.xml
+++ b/briar-android/res/layout/list_item_introduction_in.xml
@@ -11,7 +11,6 @@
 		layout="@layout/list_item_msg_in"/>
 
 	<RelativeLayout
-		android:id="@+id/introductionLayout"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:layout_gravity="left|start"
@@ -50,7 +49,7 @@
 			android:layout_alignEnd="@+id/introductionText"
 			android:layout_alignRight="@+id/introductionText"
 			android:layout_below="@+id/introductionText"
-			android:text="@string/dialog_button_accept"/>
+			android:text="@string/accept"/>
 
 		<Button
 			android:id="@+id/declineButton"
@@ -61,7 +60,7 @@
 			android:layout_below="@+id/introductionText"
 			android:layout_toLeftOf="@+id/acceptButton"
 			android:layout_toStartOf="@+id/acceptButton"
-			android:text="@string/dialog_button_decline"/>
+			android:text="@string/decline"/>
 
 	</RelativeLayout>
 
