--- a/briar-android/res/layout/list_item_rss_feed.xml
+++ b/briar-android/res/layout/list_item_rss_feed.xml
@@ -27,7 +27,7 @@
 		android:layout_alignParentTop="true"
 		android:layout_marginEnd="@dimen/listitem_horizontal_margin"
 		android:layout_marginRight="@dimen/listitem_horizontal_margin"
-		android:contentDescription="@string/delete_button"
+		android:contentDescription="@string/delete"
 		android:src="@drawable/action_delete_black"/>
 
 	<TextView
