raised api level and made necessary code changes

--- a/briar-android/res/values/styles.xml
+++ b/briar-android/res/values/styles.xml
@@ -22,14 +22,16 @@
 		<item name="elevation">1dp</item>
 	</style>
 
+	<style name="BriarButton.Default">
+		<item name="android:textAllCaps">true</item>
+	</style>
+
 	<style name="BriarButton" parent="Widget.AppCompat.Button.Colored">
 		<item name="android:layout_width">match_parent</item>
 		<item name="android:layout_height">wrap_content</item>
 		<item name="android:textSize">@dimen/text_size_medium</item>
 		<item name="android:padding">@dimen/margin_large</item>
 	</style>
-
-	<style name="BriarButton.Default"/>
 
 	<style name="BriarButtonFlat.Negative" parent="Widget.AppCompat.Button.Borderless">
 		<item name="android:textColor">@color/briar_button_negative</item>
