--- a/briar-android/res/layout/list_item_blog_post.xml
+++ b/briar-android/res/layout/list_item_blog_post.xml
@@ -2,41 +2,77 @@
 <android.support.v7.widget.CardView
 	style="@style/BriarCard"
 	xmlns:android="http://schemas.android.com/apk/res/android"
+	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content">
 
-	<RelativeLayout
+	<LinearLayout
 		android:layout_width="match_parent"
-		android:layout_height="wrap_content">
+		android:layout_height="wrap_content"
+		android:orientation="vertical">
 
-		<org.briarproject.android.util.AuthorView
-			android:id="@+id/authorView"
-			android:layout_width="wrap_content"
+		<RelativeLayout
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_alignParentLeft="true"
-			android:layout_alignParentTop="true"
-			android:layout_marginBottom="@dimen/listitem_vertical_margin"
-			android:layout_toLeftOf="@+id/commentView"/>
+			android:padding="@dimen/listitem_vertical_margin">
 
-		<ImageView
-			android:id="@+id/commentView"
-			android:layout_width="wrap_content"
+			<org.briarproject.android.util.AuthorView
+				android:id="@+id/rebloggerView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentLeft="true"
+				android:layout_alignParentTop="true"
+				android:layout_marginBottom="@dimen/listitem_horizontal_margin"
+				android:layout_toLeftOf="@+id/commentView"
+				app:persona="reblogger"/>
+
+			<org.briarproject.android.util.AuthorView
+				android:id="@+id/authorView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentLeft="true"
+				android:layout_below="@+id/rebloggerView"
+				android:layout_marginBottom="@dimen/listitem_vertical_margin"
+				android:layout_toLeftOf="@+id/commentView"/>
+
+			<ImageView
+				android:id="@+id/commentView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_alignParentRight="true"
+				android:layout_alignParentTop="true"
+				android:background="?attr/selectableItemBackground"
+				android:clickable="true"
+				android:contentDescription="@string/blogs_reblog_comment_hint"
+				android:padding="@dimen/margin_small"
+				android:src="@drawable/ic_repeat"/>
+
+			<TextView
+				android:id="@+id/bodyView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_below="@+id/authorView"
+				android:textColor="@color/briar_text_secondary"
+				android:textIsSelectable="true"
+				android:textSize="@dimen/text_size_medium"
+				tools:text="This is a body text that shows the content of a blog post.\n\nThis one is not short, but it is also not too long."/>
+
+		</RelativeLayout>
+
+		<LinearLayout
+			android:id="@+id/commentContainer"
+			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
-			android:layout_alignParentRight="true"
-			android:layout_alignParentTop="true"
-			android:padding="@dimen/margin_small"
-			android:src="@drawable/ic_repeat"/>
+			android:orientation="vertical">
 
-		<TextView
-			android:id="@+id/bodyView"
-			android:layout_width="wrap_content"
-			android:layout_height="wrap_content"
-			android:layout_below="@+id/authorView"
-			android:textColor="@color/briar_text_secondary"
-			android:textSize="@dimen/text_size_medium"
-			tools:text="This is a body text that shows the content of a blog post.\n\nThis one is not short, but it is also not too long."/>
+			<include
+				layout="@layout/list_item_blog_comment"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"/>
 
-	</RelativeLayout>
+		</LinearLayout>
+
+	</LinearLayout>
 
 </android.support.v7.widget.CardView>
