--- a/briar-android/res/menu/blogs_blog_actions.xml
+++ b/briar-android/res/menu/blogs_blog_actions.xml
@@ -1,7 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu
 	xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+	xmlns:app="http://schemas.android.com/apk/res-auto"
+	xmlns:tools="http://schemas.android.com/tools">
+
+	<item
+		android:id="@+id/action_write_blog_post"
+		android:icon="@drawable/forum_item_create_white"
+		android:title="@string/blogs_write_blog_post"
+		android:visible="false"
+		app:showAsAction="ifRoom"
+		tools:visible="true"/>
 
 	<item
 		android:id="@+id/action_blog_share"
@@ -18,6 +27,8 @@
 		android:id="@+id/action_blog_delete"
 		android:icon="@drawable/action_delete_white"
 		android:title="@string/blogs_remove_blog"
-		app:showAsAction="never"/>
+		android:visible="false"
+		app:showAsAction="never"
+		tools:visible="true"/>
 
 </menu>
