Address review issues

--- a/briar-android/res/layout/fragment_blog_post.xml
+++ b/briar-android/res/layout/fragment_blog_post.xml
@@ -20,6 +20,13 @@
 			android:layout_width="wrap_content"
 			android:layout_height="wrap_content"/>
 
+		<ProgressBar
+			android:id="@+id/progressBar"
+			style="?android:attr/progressBarStyleLarge"
+			android:layout_width="wrap_content"
+			android:layout_height="wrap_content"
+			android:layout_gravity="center"/>
+
 	</FrameLayout>
 
 </ScrollView>
